--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,3 +21,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: make install
       - run: make lint
+      - run: make test
