--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,7 +22,7 @@ jobs:
         uses: paambaati/codeclimate-action@v3.2.0
         # Add Code Climate secret key
         env:
-          CC_TEST_REPORTER_ID: 165b6a9be8dc128c299183f3fabd3e323ee7be3dc37558cb735db11466e1ab6c
+          CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATESECRET }}
         with:
           coverageCommand: make test-coverage
           debug: true
