--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Julia-Tisa/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/Julia-Tisa/frontend-project-lvl2/actions)",
-  "main": "bin/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest"
   },
