--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/Julia-Tisa/frontend-project-lvl2.git"
   },
-  "author": "",
+  "author": "Julia",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Julia-Tisa/frontend-project-lvl2/issues"
